--- a/public/index.html
+++ b/public/index.html
@@ -18,5 +18,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="app-root"></div>
+    <div id="modal-root"></div>
   </body>
 </html>
