--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" translate="no">
   <head>
     <meta charset="utf-8"/>
+    <meta name="robots" content="notranslate">
+    <meta name="googlebot" content="notranslate">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="icon" href="%PUBLIC_URL%/pics/icon-o.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/pics/icon-apple-touch.png">
