Configuration for adding Moera as a search engine to Firefox/Chrome.

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="icon" href="%PUBLIC_URL%/pics/icon-o.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/pics/icon-apple-touch.png">
+    <link rel="search" type="application/opensearchdescription+xml" title="Moera" href="%PUBLIC_URL%/opensearch.xml"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <meta name="theme-color" content="#000000"/>
     <!--
